.opsera-cwa-021226/k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cwa-021226
  labels:
    app: cwa-021226
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: cwa-021226
