.opsera-cwa-021226/k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cwa-021226
  labels:
    app: cwa-021226
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  ingressClassName: nginx
  rules:
    - host: cwa-021226-dev.agent.opsera.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cwa-021226
                port:
                  number: 80
